[gd_scene load_steps=7 format=2]

[ext_resource path="res://BattleStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/EditorOnlyPlaceholderMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://InheritedScenes/BattleArena.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://BackgroundMusic.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "jump"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector3( -4.684, 2.5, 0 ), Vector3( -1.471, 2.5, 0 ), Vector3( 1.77007, 2.5, 0 ), Vector3( 2.883, 5.7, 0 ), Vector3( 5.88778, 5.6118, 0 ) ]
}

[node name="BattleArena" type="Spatial"]
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="BackgroundMusic" parent="." instance=ExtResource( 6 )]

[node name="PlayerCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.316, 2, 9 )
current = true

[node name="PlayerSpawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.684, 2.5, 0 )

[node name="EditorOnlyPlaceholderMesh" parent="PlayerSpawn" instance=ExtResource( 2 )]

[node name="PlayerAttack_AnimationPlayer" type="AnimationPlayer" parent="PlayerSpawn"]
anims/jump = SubResource( 1 )

[node name="EnemyCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.509, 2, 9 )

[node name="EnemySpawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.785, 2.5, 0 )

[node name="EditorOnlyPlaceholderMesh" parent="EnemySpawn" instance=ExtResource( 2 )]

[node name="BattleStage" parent="." instance=ExtResource( 1 )]
[connection signal="endBattle" from="." to="." method="_on_BattleArena_endBattle"]
[connection signal="startBattle" from="." to="." method="_on_BattleArena_startBattle" binds= [ true ]]
[connection signal="animation_finished" from="PlayerSpawn/PlayerAttack_AnimationPlayer" to="." method="_on_PlayerAttack_AnimationPlayer_animation_finished"]
